--- a/access.yml
+++ b/access.yml
@@ -22,6 +22,7 @@
     with_items: "{{ vlans }}"
     tags: vlans
 
+# set trunks port and allow only required VLAN
   - name: set trunk port
     ios_config:
       provider: "{{ provider }}"
@@ -35,7 +36,8 @@
     - "{{ vlans_allowed }}"
     tags: trunk
 
-  - name: set access ports
+# set access ports and assign to to specific vlan
+- name: set access ports
     ios_config:
       provider: "{{ provider }}"
       lines:
