--- a/access.yml
+++ b/access.yml
@@ -10,7 +10,7 @@
   - name: set hostname
     ios_config:
       provider: "{{ provider }}"
-      lines: hostname "{{ inventory_hostname }}"
+      lines: hostname "{{ ansible_hostname }}"
     tags: hostname
 
   - name: create vlans
