--- a/group_vars/core.yml
+++ b/group_vars/core.yml
@@ -1,10 +1,25 @@
 ---
+svi_int:
+ - vlan11 
+ - vlan12 
+ - vlan13
+ - vlan14 
+ - vlan51 
+ - vlan52  
+ - vlan53  
+ - vlan54 
+
+routed_ports:
+ - Ethernet1/0
+ - Ethernet1/1
+ - Ethernet1/2
+ 
 hsrp_vip:
- - { interface: vlan 11, vip: 192.168.11.254, hello: 250, dead: 750 }
- - { interface: vlan 12, vip: 192.168.12.254, hello: 250, dead: 750 }
- - { interface: vlan 13, vip: 192.168.13.254, hello: 250, dead: 750 }
- - { interface: vlan 14, vip: 192.168.14.254, hello: 250, dead: 750 }
- - { interface: vlan 51, vip: 192.168.51.254, hello: 250, dead: 750 }
- - { interface: vlan 52, vip: 192.168.52.254, hello: 250, dead: 750 } 
- - { interface: vlan 53, vip: 192.168.53.254, hello: 250, dead: 750 }
- - { interface: vlan 54, vip: 192.168.54.254, hello: 250, dead: 750 }
+ - { vip: 192.168.11.254, hello: 250, dead: 750 }
+ - { vip: 192.168.12.254, hello: 250, dead: 750 }
+ - { vip: 192.168.13.254, hello: 250, dead: 750 }
+ - { vip: 192.168.14.254, hello: 250, dead: 750 }
+ - { vip: 192.168.51.254, hello: 250, dead: 750 }
+ - { vip: 192.168.52.254, hello: 250, dead: 750 } 
+ - { vip: 192.168.53.254, hello: 250, dead: 750 }
+ - { vip: 192.168.54.254, hello: 250, dead: 750 }
