--- a/router.yml
+++ b/router.yml
@@ -6,64 +6,75 @@
  
   tasks:
   
+########  
   - name: set hostname
     ios_config:
       provider: "{{ provider }}"
-      lines: hostname "{{ inventory_hostname }}"    
+      lines: hostname "{{ ansible_hostname }}"     
 
+########
   - name: configure interface
     ios_config:
       provider: "{{ provider }}"
       lines:
-      - ip add {{ item.ip }} {{ item.mask }}
+      - description {{ item.value.desc }}
+      - ip add {{ item.value.ip }} {{ item.value.mask }}
       - ip nat inside
-      - no shut
-      parents: interface {{ item.interface }}
-      match: exact            
-    with_items: "{{ interfaces }}"
-    tags: interface
+      parents: interface {{ item.key }}
+    with_dict: "{{ int }}"
+    tags: int     
 
+########
   - name: configure wan interface
     ios_config:
       provider: "{{ provider }}"
       lines:
       - ip add dhcp
       - ip nat outside
-      - no shut
-      parents: interface {{ item }}
+      parents: interface {{ item.key }}
       match: exact            
-    with_items:
-    - Ethernet1/0 
+    with_dict: "{{ wan_int }}" 
     tags: wan
 
+########
   - name: access list to use in nat
     ios_config:
       provider: "{{ provider }}"
       lines:
-      - permit 192.168.0.0 0.0.0.63 log
+      - permit 10.0.0.0 0.0.63.255 log
       parents: ip access-list standard NAT
       match: exact
     tags: acl
 
+########
   - name: ip nat and default route
     ios_config:
       provider: "{{ provider }}"
       lines:
-      - ip nat inside source list NAT interface e1/3 overload 
+      - ip nat inside source list NAT interface e1/0 overload 
       - ip route 0.0.0.0 0.0.0.0 192.168.91.2
       match: exact            
     tags: nat_default
 
+########
   - name: routing
     ios_config:
       provider: "{{ provider }}"
       lines:
       - no auto 
-      - network 172.16.0.0 0.0.255.255
+      - network 10.0.0.0 0.0.255.255
       - passive-interface default
-      - no passive-interface {{ item.interface }}
       - redistribute static
       parents: router eigrp 1
       match: exact            
-    with_items: "{{ interfaces }}"
     tags: routing
+    
+########
+  - name: passive
+    ios_config:
+      provider: "{{ provider }}"
+      lines:
+      - no passive-interface {{ item.key }}
+      parents: router eigrp 1
+    with_dict: "{{ int }}"
+    tags: passive
