--- a/host_vars/rtr_02.yml
+++ b/host_vars/rtr_02.yml
@@ -1,6 +1,10 @@
 ---
-interfaces:
-  - { interface: Ethernet0/0, description: --> core_sw_01, ip: 172.16.2.2, mask: 255.255.255.0 }
-  - { interface: Ethernet0/1, description: --> core_sw_02, ip: 172.16.4.2, mask: 255.255.255.0 }
-
-default_route:
+attr:
+ e00:
+   desc: link-to-core_sw_01
+   ip: 10.0.100.10 
+ e01:
+   desc: link-to-core_sw_02
+   ip: 10.0.100.14
+ e10:
+   desc: link-to-isp-b
