--- a/host_vars/rtr_02.yml
+++ b/host_vars/rtr_02.yml
@@ -1,10 +1,12 @@
 ---
-attr:
- e00:
-   desc: link-to-core_sw_01
-   ip: 10.0.100.10 
- e01:
-   desc: link-to-core_sw_02
-   ip: 10.0.100.14
- e10:
-   desc: link-to-isp-b
+int:
+  - name: "Ethernet0/0"
+    desc: "link-to-core_sw_01"
+    ip: 10.0.100.10 
+  - name: "Ethernet0/1"
+    desc: link-to-core_sw_02
+    ip: 10.0.100.18
+
+wan_int:
+  - name: "Ethernet1/0"
+    desc: "link-to-isp-b"
