--- a/host_vars/rtr_02.yml
+++ b/host_vars/rtr_02.yml
@@ -4,7 +4,7 @@ int:
     desc: "link-to-core_sw_01"
     ip: 10.0.100.10 
   - name: "Ethernet0/1"
-    desc: link-to-core_sw_02
+    desc: "link-to-core_sw_02"
     ip: 10.0.100.18
 
 wan_int:
